Revision history for {{$dist->name}}

{{$NEXT}}

4.200016  2011-08-17 18:07:21 America/New_York
          add options to exclude files from GatherDir (David Golden)

4.200015  2011-08-12 13:45:42 America/New_York
          don't build the dist in a directory with -TRIAL in the name; this
          should fix bugs in "dzil release --trial" and probably other related
          bugs

4.200014  2011-08-07 18:18:01 America/New_York
          add documentation for TemplateModule (thanks, Kent Fredric)

          fixes to tester.t for Win32 (thanks, Christian Walde)

4.200013  2011-08-05 09:30:01 America/New_York
          "dzil listdeps --missing" no longer dies if it encounters an invalid
          $VERSION (Jesse Luehrs)

          PkgVersion and PkgDist no longer use BEGIN blocks

4.200012  2011-07-18 09:02:09 America/New_York
          allow abstracts of more than one line, or with more than one word
          before the dash, to be properly extracted (Florian Ragwitz)

          stringify tarball name to work with older Archive::Tar (Jan Tore
          Morken)

4.200011  2011-07-14 22:53:34 America/New_York
          move the file mode setting into the tar creation, not a fixup step

4.200010  2011-07-14 22:27:46 America/New_York
          fix [rt.cpan.org #68223] -- Test::Dzil built tarballs with bad root
          dirs;  test and code mostly provided by Rob Hoelz

4.200009  2011-07-06 23:26:09 America/New_York
          the "skip" argument to AutoPrereqs can now be given multiple times

          authordeps now makes a rough attempt to deal with [@Filter]

          catch and simplify "no dist.ini" errors from MVP

          UploadToCPAN now takes a "upload_uri" option

          UploadToCPAN will now prompt for credentials if needed

          add follow_symlinks to GatherDir (thanks, Luc St-Louis)

4.200008  2011-06-23 11:53:56 America/New_York
          PodVersion no longer drops the file's last newline
